[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/GUI_elements/dialog_box.gd" type="Script" id=1]
[ext_resource path="res://nodes/GUI_elements/selectable_option.tscn" type="PackedScene" id=2]

[node name="dialog_box" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="box" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="name_box" type="Label" parent="box" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "TEST"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text_box" type="Label" parent="box" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Hello world"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="next_indicator" type="Polygon2D" parent="box" index="2"]

visible = false
polygon = PoolVector2Array( 336, 120, 352, 112, 336, 104 )
uv = PoolVector2Array(  )
color = Color( 0.046875, 0.0366211, 0.0366211, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="selection_boxes" type="Control" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="selection_box_3" type="Panel" parent="selection_boxes" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 368.0
margin_right = 480.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="option_1" parent="selection_boxes/selection_box_3" index="0" instance=ExtResource( 2 )]

margin_left = 8.0
margin_right = 104.0
margin_bottom = 32.0
rect_clip_content = false

[node name="option_2" parent="selection_boxes/selection_box_3" index="1" instance=ExtResource( 2 )]

margin_left = 8.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 64.0
rect_clip_content = false

[node name="option_3" parent="selection_boxes/selection_box_3" index="2" instance=ExtResource( 2 )]

margin_left = 8.0
margin_top = 64.0
margin_right = 104.0
margin_bottom = 96.0
rect_clip_content = false

[node name="selection_box_4" type="Panel" parent="selection_boxes" index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 368.0
margin_right = 480.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="option_1" parent="selection_boxes/selection_box_4" index="0" instance=ExtResource( 2 )]

margin_left = 8.0
margin_right = 104.0
margin_bottom = 32.0
rect_clip_content = false

[node name="option_2" parent="selection_boxes/selection_box_4" index="1" instance=ExtResource( 2 )]

margin_left = 8.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 64.0
rect_clip_content = false

[node name="option_3" parent="selection_boxes/selection_box_4" index="2" instance=ExtResource( 2 )]

margin_left = 8.0
margin_top = 64.0
margin_right = 104.0
margin_bottom = 96.0
rect_clip_content = false

[node name="option_4" parent="selection_boxes/selection_box_4" index="3" instance=ExtResource( 2 )]

margin_left = 8.0
margin_top = 96.0
margin_right = 104.0
margin_bottom = 128.0
rect_clip_content = false

[node name="selection_box_2" type="Panel" parent="selection_boxes" index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 368.0
margin_right = 480.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="option_1" parent="selection_boxes/selection_box_2" index="0" instance=ExtResource( 2 )]

margin_left = 8.0
margin_top = 24.0
margin_right = 104.0
margin_bottom = 56.0
rect_clip_content = false

[node name="option_2" parent="selection_boxes/selection_box_2" index="1" instance=ExtResource( 2 )]

margin_left = 8.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
rect_clip_content = false

[node name="scroll_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="scroll_timer" to="." method="_on_scroll_timer_timeout"]


